# Anchor-Flow

./: .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: Scripts.md
Scripts/: AzureTextExtraction.py  CompareJSON.py  MergeJSON.py  ProcessPDF's.py  TextAnchor.py
app/: main.py
app/core/: config.py
app/routers/: ocr.py
app/services/: azure_service.py  batch_processor.py  enrichment.py  extraction.py  json_service.py  merge.py
